--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
             <div class="product-card">
                 <div class="product-image">
                     <span class="discount-tag">5% off</span>
-                    <img src="image/uk.jpg" class="product-thumb" alt="">
+                    <img src="image/guitars/uk.jpg" class="product-thumb" alt="">
                     <button class="card-btn">add to whislist</button>
                 </div>
                 <div class="product-info">
@@ -76,7 +76,7 @@
             <div class="product-card">
                 <div class="product-image">
                     <span class="discount-tag">5% off</span>
-                    <img src="image/uk1.jpg" class="product-thumb" alt="">
+                    <img src="image/guitars/uk1.jpg" class="product-thumb" alt="">
                     <button class="card-btn">add to whislist</button>
                 </div>
                 <div class="product-info">
@@ -89,7 +89,7 @@
             <div class="product-card">
                 <div class="product-image">
                     <span class="discount-tag">5% off</span>
-                    <img src="image/uk2.jpg" class="product-thumb" alt="">
+                    <img src="image/guitars/uk2.jpg" class="product-thumb" alt="">
                     <button class="card-btn">add to whislist</button>
                 </div>
                 <div class="product-info">
@@ -103,7 +103,7 @@
             <div class="product-card">
                 <div class="product-image">
                     <span class="discount-tag">5% off</span>
-                    <img src="image/uk3.jpg" class="product-thumb" alt="">
+                    <img src="image/guitars/uk3.jpg" class="product-thumb" alt="">
                     <button class="card-btn">add to whislist</button>
                 </div>
                 <div class="product-info">
@@ -117,7 +117,7 @@
             <div class="product-card">
                 <div class="product-image">
                     <span class="discount-tag">5% off</span>
-                    <img src="image/uk4.jpg" class="product-thumb" alt="">
+                    <img src="image/guitars/uk4.jpg" class="product-thumb" alt="">
                     <button class="card-btn">add to whislist</button>
                 </div>
                 <div class="product-info">
@@ -130,7 +130,7 @@
             <div class="product-card">
                 <div class="product-image">
                     <span class="discount-tag">5% off</span>
-                    <img src="image/uk5.jpg" class="product-thumb" alt="">
+                    <img src="image/guitars/uk5.jpg" class="product-thumb" alt="">
                     <button class="card-btn">add to whislist</button>
                 </div>
                 <div class="product-info">
@@ -143,7 +143,7 @@
             <div class="product-card">
                 <div class="product-image">
                     <span class="discount-tag">5% off</span>
-                    <img src="image/uk6.jpg" class="product-thumb" alt="">
+                    <img src="image/guitars/uk6.jpg" class="product-thumb" alt="">
                     <button class="card-btn">add to whislist</button>
                 </div>
                 <div class="product-info">
@@ -195,7 +195,7 @@
         <div class="product-container">
             <div class="product-card">
                 <div class="product-image">
-                    <img src="image/guitar.jpg" class="product-thumb" alt="">
+                    <img src="image/guitars/guitar.jpg" class="product-thumb" alt="">
                     <button class="card-btn">add to whislist</button>
                 </div>
                 <div class="product-info">
@@ -207,7 +207,7 @@
 
             <div class="product-card">
                 <div class="product-image">
-                    <img src="image/guitar1.jpg" class="product-thumb" alt="">
+                    <img src="image/guitars/guitar1.jpg" class="product-thumb" alt="">
                     <button class="card-btn">add to whislist</button>
                 </div>
                 <div class="product-info">
@@ -219,7 +219,7 @@
 
             <div class="product-card">
                 <div class="product-image">
-                    <img src="image/guitar2.jpg" class="product-thumb" alt="">
+                    <img src="image/guitars/guitar2.jpg" class="product-thumb" alt="">
                     <button class="card-btn">add to whislist</button>
                 </div>
                 <div class="product-info">
@@ -231,7 +231,7 @@
 
             <div class="product-card">
                 <div class="product-image">
-                    <img src="image/guitar3.jpg" class="product-thumb" alt="">
+                    <img src="image/guitars/guitar3.jpg" class="product-thumb" alt="">
                     <button class="card-btn">add to whislist</button>
                 </div>
                 <div class="product-info">
@@ -243,7 +243,7 @@
 
             <div class="product-card">
                 <div class="product-image">
-                    <img src="image/guitar4.jpg" class="product-thumb" alt="">
+                    <img src="image/guitars/guitar4.jpg" class="product-thumb" alt="">
                     <button class="card-btn">add to whislist</button>
                 </div>
                 <div class="product-info">
@@ -255,7 +255,7 @@
 
             <div class="product-card">
                 <div class="product-image">
-                    <img src="image/guitar5.jpg" class="product-thumb" alt="">
+                    <img src="image/guitars/guitar5.jpg" class="product-thumb" alt="">
                     <button class="card-btn">add to whislist</button>
                 </div>
                 <div class="product-info">
@@ -267,7 +267,7 @@
 
             <div class="product-card">
                 <div class="product-image">
-                    <img src="image/guitar6.jpg" class="product-thumb" alt="">
+                    <img src="image/guitars/guitar6.jpg" class="product-thumb" alt="">
                     <button class="card-btn">add to whislist</button>
                 </div>
                 <div class="product-info">
