--- a/index.html
+++ b/index.html
@@ -286,7 +286,7 @@
         <div class="product-container">
             <div class="product-card">
                 <div class="product-image">
-                    <a href="product.html"><img src="image/drum.jpg" class="product-thumb" alt=""></a>
+                    <a href="product.html"><img src="image/drums/drum.jpg" class="product-thumb" alt=""></a>
                     <button class="card-btn">add to whislist</button>
                 </div>
                 <div class="product-info">
@@ -298,7 +298,7 @@
 
             <div class="product-card">
                 <div class="product-image">
-                    <img src="image/drum1.jpg" class="product-thumb" alt="">
+                    <img src="image/drums/drum1.jpg" class="product-thumb" alt="">
                     <button class="card-btn">add to whislist</button>
                 </div>
                 <div class="product-info">
@@ -310,7 +310,7 @@
 
             <div class="product-card">
                 <div class="product-image">
-                    <img src="image/drum2.jpg" class="product-thumb" alt="">
+                    <img src="image/drums/drum2.jpg" class="product-thumb" alt="">
                     <button class="card-btn">add to whislist</button>
                 </div>
                 <div class="product-info">
@@ -323,7 +323,7 @@
 
             <div class="product-card">
                 <div class="product-image">
-                    <img src="image/drum3.jpg" class="product-thumb" alt="">
+                    <img src="image/drums/drum3.jpg" class="product-thumb" alt="">
                     <button class="card-btn">add to whislist</button>
                 </div>
                 <div class="product-info">
@@ -336,7 +336,7 @@
 
             <div class="product-card">
                 <div class="product-image">
-                    <img src="image/drum4.jpg" class="product-thumb" alt="">
+                    <img src="image/drums/drum4.jpg" class="product-thumb" alt="">
                     <button class="card-btn">add to whislist</button>
                 </div>
                 <div class="product-info">
@@ -349,7 +349,7 @@
 
             <div class="product-card">
                 <div class="product-image">
-                    <img src="image/drum5.jpg" class="product-thumb" alt="">
+                    <img src="image/drums/drum5.jpg" class="product-thumb" alt="">
                     <button class="card-btn">add to whislist</button>
                 </div>
                 <div class="product-info">
@@ -361,7 +361,7 @@
 
             <div class="product-card">
                 <div class="product-image">
-                    <img src="image/drum6.jpg" class="product-thumb" alt="">
+                    <img src="image/drums/drum6.jpg" class="product-thumb" alt="">
                     <button class="card-btn">add to whislist</button>
                 </div>
                 <div class="product-info">
