--- a/product.html
+++ b/product.html
@@ -15,10 +15,10 @@
     <section class="product-details">
         <div class="image-slider">
             <div class="product-images">
-                <img src="image/drum.jpg" class="active" alt="">
-                <img src="image/drum2.jpg" alt="">
-                <img src="image/drum3.jpg" alt="">
-                <img src="image/drum7.jpg" alt="">
+                <img src="image/drums/drum.jpg" class="active" alt="">
+                <img src="image/drums/drum2.jpg" alt="">
+                <img src="image/drums/drum3.jpg" alt="">
+                <img src="image/drums/drum7.jpg" alt="">
             </div>
         </div>
 
@@ -47,7 +47,7 @@
         <div class="product-container">
             <div class="product-card">
                 <div class="product-image">
-                    <img src="image/guitar.jpg" class="product-thumb" alt="">
+                    <img src="image/guitars/guitar.jpg" class="product-thumb" alt="">
                     <button class="card-btn">add to whislist</button>
                 </div>
                 <div class="product-info">
@@ -59,7 +59,7 @@
 
             <div class="product-card">
                 <div class="product-image">
-                    <img src="image/guitar1.jpg" class="product-thumb" alt="">
+                    <img src="image/guitars/guitar1.jpg" class="product-thumb" alt="">
                     <button class="card-btn">add to whislist</button>
                 </div>
                 <div class="product-info">
@@ -71,7 +71,7 @@
 
             <div class="product-card">
                 <div class="product-image">
-                    <img src="image/guitar2.jpg" class="product-thumb" alt="">
+                    <img src="image/guitars/guitar2.jpg" class="product-thumb" alt="">
                     <button class="card-btn">add to whislist</button>
                 </div>
                 <div class="product-info">
@@ -83,7 +83,7 @@
 
             <div class="product-card">
                 <div class="product-image">
-                    <img src="image/guitar3.jpg" class="product-thumb" alt="">
+                    <img src="image/guitars/guitar3.jpg" class="product-thumb" alt="">
                     <button class="card-btn">add to whislist</button>
                 </div>
                 <div class="product-info">
@@ -95,7 +95,7 @@
 
             <div class="product-card">
                 <div class="product-image">
-                    <img src="image/guitar4.jpg" class="product-thumb" alt="">
+                    <img src="image/guitars/guitar4.jpg" class="product-thumb" alt="">
                     <button class="card-btn">add to whislist</button>
                 </div>
                 <div class="product-info">
@@ -107,7 +107,7 @@
 
             <div class="product-card">
                 <div class="product-image">
-                    <img src="image/guitar5.jpg" class="product-thumb" alt="">
+                    <img src="image/guitars/guitar5.jpg" class="product-thumb" alt="">
                     <button class="card-btn">add to whislist</button>
                 </div>
                 <div class="product-info">
@@ -119,7 +119,7 @@
 
             <div class="product-card">
                 <div class="product-image">
-                    <img src="image/guitar6.jpg" class="product-thumb" alt="">
+                    <img src="image/guitars/guitar6.jpg" class="product-thumb" alt="">
                     <button class="card-btn">add to whislist</button>
                 </div>
                 <div class="product-info">
@@ -140,7 +140,7 @@
         <div class="product-container">
             <div class="product-card">
                 <div class="product-image">
-                    <img src="image/drum.jpg" class="product-thumb" alt="">
+                    <img src="image/drums/drum.jpg" class="product-thumb" alt="">
                     <button class="card-btn">add to whislist</button>
                 </div>
                 <div class="product-info">
@@ -152,7 +152,7 @@
 
             <div class="product-card">
                 <div class="product-image">
-                    <img src="image/drum1.jpg" class="product-thumb" alt="">
+                    <img src="image/drums/drum1.jpg" class="product-thumb" alt="">
                     <button class="card-btn">add to whislist</button>
                 </div>
                 <div class="product-info">
@@ -164,7 +164,7 @@
 
             <div class="product-card">
                 <div class="product-image">
-                    <img src="image/drum2.jpg" class="product-thumb" alt="">
+                    <img src="image/drums/drum2.jpg" class="product-thumb" alt="">
                     <button class="card-btn">add to whislist</button>
                 </div>
                 <div class="product-info">
@@ -177,7 +177,7 @@
 
             <div class="product-card">
                 <div class="product-image">
-                    <img src="image/drum3.jpg" class="product-thumb" alt="">
+                    <img src="image/drums/drum3.jpg" class="product-thumb" alt="">
                     <button class="card-btn">add to whislist</button>
                 </div>
                 <div class="product-info">
@@ -190,7 +190,7 @@
 
             <div class="product-card">
                 <div class="product-image">
-                    <img src="image/drum4.jpg" class="product-thumb" alt="">
+                    <img src="image/drums/drum4.jpg" class="product-thumb" alt="">
                     <button class="card-btn">add to whislist</button>
                 </div>
                 <div class="product-info">
@@ -203,7 +203,7 @@
 
             <div class="product-card">
                 <div class="product-image">
-                    <img src="image/drum5.jpg" class="product-thumb" alt="">
+                    <img src="image/drums/drum5.jpg" class="product-thumb" alt="">
                     <button class="card-btn">add to whislist</button>
                 </div>
                 <div class="product-info">
@@ -215,7 +215,7 @@
 
             <div class="product-card">
                 <div class="product-image">
-                    <img src="image/drum6.jpg" class="product-thumb" alt="">
+                    <img src="image/drums/drum6.jpg" class="product-thumb" alt="">
                     <button class="card-btn">add to whislist</button>
                 </div>
                 <div class="product-info">
