--- a/search.html
+++ b/search.html
@@ -20,7 +20,7 @@
             <div class="product-card">
                 <div class="product-image">
                     <span class="discount-tag">5% off</span>
-                    <img src="image/uk.jpg" class="product-thumb" alt="">
+                    <img src="image/guitars/uk.jpg" class="product-thumb" alt="">
                     <button class="card-btn">add to whislist</button>
                 </div>
                 <div class="product-info">
@@ -33,7 +33,7 @@
             <div class="product-card">
                 <div class="product-image">
                     <span class="discount-tag">5% off</span>
-                    <img src="image/uk1.jpg" class="product-thumb" alt="">
+                    <img src="image/guitars/uk1.jpg" class="product-thumb" alt="">
                     <button class="card-btn">add to whislist</button>
                 </div>
                 <div class="product-info">
@@ -46,7 +46,7 @@
             <div class="product-card">
                 <div class="product-image">
                     <span class="discount-tag">5% off</span>
-                    <img src="image/uk2.jpg" class="product-thumb" alt="">
+                    <img src="image/guitars/uk2.jpg" class="product-thumb" alt="">
                     <button class="card-btn">add to whislist</button>
                 </div>
                 <div class="product-info">
@@ -60,7 +60,7 @@
             <div class="product-card">
                 <div class="product-image">
                     <span class="discount-tag">5% off</span>
-                    <img src="image/uk3.jpg" class="product-thumb" alt="">
+                    <img src="image/guitars/uk3.jpg" class="product-thumb" alt="">
                     <button class="card-btn">add to whislist</button>
                 </div>
                 <div class="product-info">
@@ -74,7 +74,7 @@
             <div class="product-card">
                 <div class="product-image">
                     <span class="discount-tag">5% off</span>
-                    <img src="image/uk4.jpg" class="product-thumb" alt="">
+                    <img src="image/guitars/uk4.jpg" class="product-thumb" alt="">
                     <button class="card-btn">add to whislist</button>
                 </div>
                 <div class="product-info">
@@ -86,7 +86,7 @@
 
             <div class="product-card">
                 <div class="product-image">
-                    <img src="image/card.jpg" class="product-thumb" alt="">
+                    <img src="image/drums/card.jpg" class="product-thumb" alt="">
                     <button class="card-btn">add to whislist</button>
                 </div>
                 <div class="product-info">
@@ -98,7 +98,7 @@
 
             <div class="product-card">
                 <div class="product-image">
-                    <img src="image/card1.jpg" class="product-thumb" alt="">
+                    <img src="image/drums/card1.jpg" class="product-thumb" alt="">
                     <button class="card-btn">add to whislist</button>
                 </div>
                 <div class="product-info">
@@ -110,7 +110,7 @@
 
             <div class="product-card">
                 <div class="product-image">
-                    <img src="image/card2.jpg" class="product-thumb" alt="">
+                    <img src="image/drums/card2.jpg" class="product-thumb" alt="">
                     <button class="card-btn">add to whislist</button>
                 </div>
                 <div class="product-info">
@@ -122,7 +122,7 @@
 
             <div class="product-card">
                 <div class="product-image">
-                    <img src="image/card3.jpg" class="product-thumb" alt="">
+                    <img src="image/drums/card3.jpg" class="product-thumb" alt="">
                     <button class="card-btn">add to whislist</button>
                 </div>
                 <div class="product-info">
@@ -134,7 +134,7 @@
 
             <div class="product-card">
                 <div class="product-image">
-                    <img src="image/card4.jpg" class="product-thumb" alt="">
+                    <img src="image/drums/card4.jpg" class="product-thumb" alt="">
                     <button class="card-btn">add to whislist</button>
                 </div>
                 <div class="product-info">
@@ -146,7 +146,7 @@
 
             <div class="product-card">
                 <div class="product-image">
-                    <img src="image/card5.jpg" class="product-thumb" alt="">
+                    <img src="image/drums/card5.jpg" class="product-thumb" alt="">
                     <button class="card-btn">add to whislist</button>
                 </div>
                 <div class="product-info">
@@ -158,7 +158,7 @@
 
             <div class="product-card">
                 <div class="product-image">
-                    <img src="image/card6.jpg" class="product-thumb" alt="">
+                    <img src="image/drums/card6.jpg" class="product-thumb" alt="">
                     <button class="card-btn">add to whislist</button>
                 </div>
                 <div class="product-info">
@@ -170,7 +170,7 @@
 
             <div class="product-card">
                 <div class="product-image">
-                    <img src="image/card7.jpg" class="product-thumb" alt="">
+                    <img src="image/guitars/card7.jpg" class="product-thumb" alt="">
                     <button class="card-btn">add to whislist</button>
                 </div>
                 <div class="product-info">
@@ -182,7 +182,7 @@
 
             <div class="product-card">
                 <div class="product-image">
-                    <img src="image/card8.jpg" class="product-thumb" alt="">
+                    <img src="image/guitars/card8.jpg" class="product-thumb" alt="">
                     <button class="card-btn">add to whislist</button>
                 </div>
                 <div class="product-info">
@@ -194,7 +194,7 @@
 
             <div class="product-card">
                 <div class="product-image">
-                    <img src="image/card9.jpg" class="product-thumb" alt="">
+                    <img src="image/guitars/card9.jpg" class="product-thumb" alt="">
                     <button class="card-btn">add to whislist</button>
                 </div>
                 <div class="product-info">
@@ -206,7 +206,7 @@
 
             <div class="product-card">
                 <div class="product-image">
-                    <img src="image/card10.jpg" class="product-thumb" alt="">
+                    <img src="image/guitars/card10.jpg" class="product-thumb" alt="">
                     <button class="card-btn">add to whislist</button>
                 </div>
                 <div class="product-info">
@@ -218,7 +218,7 @@
 
             <div class="product-card">
                 <div class="product-image">
-                    <img src="image/card11.jpg" class="product-thumb" alt="">
+                    <img src="image/guitars/card11.jpg" class="product-thumb" alt="">
                     <button class="card-btn">add to whislist</button>
                 </div>
                 <div class="product-info">
@@ -230,7 +230,7 @@
 
             <div class="product-card">
                 <div class="product-image">
-                    <img src="image/card12.jpg" class="product-thumb" alt="">
+                    <img src="image/guitars/card12.jpg" class="product-thumb" alt="">
                     <button class="card-btn">add to whislist</button>
                 </div>
                 <div class="product-info">
@@ -242,7 +242,7 @@
 
             <div class="product-card">
                 <div class="product-image">
-                    <img src="image/card13.jpg" class="product-thumb" alt="">
+                    <img src="image/guitars/card13.jpg" class="product-thumb" alt="">
                     <button class="card-btn">add to whislist</button>
                 </div>
                 <div class="product-info">
@@ -254,7 +254,7 @@
 
             <div class="product-card">
                 <div class="product-image">
-                    <img src="image/card14.jpg" class="product-thumb" alt="">
+                    <img src="image/guitars/card14.jpg" class="product-thumb" alt="">
                     <button class="card-btn">add to whislist</button>
                 </div>
                 <div class="product-info">
